k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartamazon
  labels:
    name: smartamazon
    environment: production
    managed-by: kubectl
